# rust_dpr

./: .gitignore  5月14记录.md  69.md  Cargo.toml  Makefile  add_rustdpr_benchmark_cases.py  example.md
annotations/: cargo_fuzz_candidate_truth.template.csv  template.csv
benchmarks/: expected.yaml  manifest.yaml  schema_template.yaml
benchmarks/micro/mb_before_unsafe_guarded_by_length/fuzz/: Cargo.toml
benchmarks/micro/mb_before_unsafe_guarded_by_length/fuzz/fuzz_targets/: fuzz_target_1.rs
benchmarks/micro/mb_ffi_c_unwind_callback_panic/fuzz/: Cargo.toml
benchmarks/micro/mb_ffi_c_unwind_callback_panic/fuzz/fuzz_targets/: fuzz_target_1.rs
benchmarks/micro/mb_ffi_callback_panics/fuzz/: Cargo.toml
benchmarks/micro/mb_ffi_callback_panics/fuzz/fuzz_targets/: fuzz_target_1.rs
benchmarks/micro/mb_harness_aliasing_raw_mut/fuzz/: Cargo.toml
benchmarks/micro/mb_harness_aliasing_raw_mut/fuzz/fuzz_targets/: fuzz_target_1.rs
benchmarks/micro/mb_inside_unsafe_index/fuzz/: Cargo.toml
benchmarks/micro/mb_inside_unsafe_index/fuzz/fuzz_targets/: fuzz_target_1.rs
benchmarks/micro/mb_none_static_unsafe_unreached/fuzz/: Cargo.toml
benchmarks/micro/mb_none_static_unsafe_unreached/fuzz/fuzz_targets/: fuzz_target_1.rs
benchmarks/micro/mb_panic_after_unsafe/fuzz/: Cargo.toml
benchmarks/micro/mb_panic_after_unsafe/fuzz/fuzz_targets/: fuzz_target_1.rs
benchmarks/oracle/ob_asan_oob_write_control/fuzz/: Cargo.toml
benchmarks/oracle/ob_asan_oob_write_control/fuzz/fuzz_targets/: fuzz_target_1.rs
benchmarks/oracle/ob_global_oob_write/fuzz/: Cargo.toml
benchmarks/oracle/ob_global_oob_write/fuzz/fuzz_targets/: fuzz_target_1.rs
benchmarks/oracle/ob_misaligned_read_miri/fuzz/: Cargo.toml
benchmarks/oracle/ob_misaligned_read_miri/fuzz/fuzz_targets/: fuzz_target_1.rs
benchmarks/oracle/ob_uninit_bool_miri/fuzz/: Cargo.toml
benchmarks/oracle/ob_uninit_bool_miri/fuzz/fuzz_targets/: fuzz_target_1.rs
benchmarks/realworld/rw_arena_nonnull_handle/fuzz/: Cargo.toml
benchmarks/realworld/rw_arena_nonnull_handle/fuzz/fuzz_targets/: fuzz_target_1.rs
benchmarks/realworld/rw_ffi_cstr_boundary/fuzz/: Cargo.toml
benchmarks/realworld/rw_ffi_cstr_boundary/fuzz/fuzz_targets/: fuzz_target_1.rs
benchmarks/realworld/rw_packet_set_len_decoder/fuzz/: Cargo.toml
benchmarks/realworld/rw_packet_set_len_decoder/fuzz/fuzz_targets/: fuzz_target_1.rs
benchmarks/regression/rsec_borrowck_any_as_u8_slice/fuzz/: Cargo.toml
benchmarks/regression/rsec_borrowck_any_as_u8_slice/fuzz/fuzz_targets/: fuzz_target_1.rs
benchmarks/regression/rsec_bra_2021_0008_fixed/fuzz/: Cargo.toml
benchmarks/regression/rsec_bra_2021_0008_fixed/fuzz/fuzz_targets/: fuzz_target_1.rs
benchmarks/regression/rsec_cdr_2021_0012_fixed/fuzz/: Cargo.toml
benchmarks/regression/rsec_cdr_2021_0012_fixed/fuzz/fuzz_targets/: fuzz_target_1.rs
benchmarks/regression/rsec_cdr_2021_0012_vuln/fuzz/: Cargo.toml
benchmarks/regression/rsec_cdr_2021_0012_vuln/fuzz/fuzz_targets/: fuzz_target_1.rs
benchmarks/regression/rsec_direct_ring_buffer_2025_0105_fixed/fuzz/: Cargo.toml
benchmarks/regression/rsec_direct_ring_buffer_2025_0105_fixed/fuzz/fuzz_targets/: fuzz_target_1.rs
benchmarks/regression/rsec_direct_ring_buffer_2025_0105_vuln/fuzz/: Cargo.toml
benchmarks/regression/rsec_direct_ring_buffer_2025_0105_vuln/fuzz/fuzz_targets/: fuzz_target_1.rs
benchmarks/regression/rsec_endian_trait_2021_0039_vuln/fuzz/: Cargo.toml
benchmarks/regression/rsec_endian_trait_2021_0039_vuln/fuzz/fuzz_targets/: fuzz_target_1.rs
benchmarks/regression/rsec_marc_2021_0014_fixed/fuzz/: Cargo.toml
benchmarks/regression/rsec_marc_2021_0014_fixed/fuzz/fuzz_targets/: fuzz_target_1.rs
benchmarks/regression/rsec_ms3d_2021_0016_vuln/fuzz/: Cargo.toml
benchmarks/regression/rsec_ms3d_2021_0016_vuln/fuzz/fuzz_targets/: fuzz_target_1.rs
benchmarks/regression/rsec_qwutils_2021_0018_fixed/fuzz/: Cargo.toml
benchmarks/regression/rsec_qwutils_2021_0018_fixed/fuzz/fuzz_targets/: fuzz_target_1.rs
benchmarks/regression/rsec_scratchpad_2021_0030_vuln/fuzz/: Cargo.toml
benchmarks/regression/rsec_scratchpad_2021_0030_vuln/fuzz/fuzz_targets/: fuzz_target_1.rs
benchmarks/regression/rsec_slice_deque_2021_0047_fixed_control/fuzz/: Cargo.toml
benchmarks/regression/rsec_slice_deque_2021_0047_fixed_control/fuzz/fuzz_targets/: fuzz_target_1.rs
benchmarks/regression/rsec_slice_deque_2021_0047_vuln/fuzz/: Cargo.toml
benchmarks/regression/rsec_slice_deque_2021_0047_vuln/fuzz/fuzz_targets/: fuzz_target_1.rs
crates/rustdpr-analyzer/: Cargo.toml
crates/rustdpr-analyzer/src/: dpg_builder.rs  harness_validity.rs  lib.rs  metadata.rs  site_locator.rs
crates/rustdpr-cli/: Cargo.toml
crates/rustdpr-cli/src/: main.rs
docs/: annotation_manual.md  artifact_eval.md  baseline_protocol.md  cargo_fuzz_baseline_protocol.md  experiment_protocol.md  problem_formalization.md  realworld_expansion_notes.md  realworld_inventory_v1.md  realworld_selection.md  regression_real_external_expansion.md  regression_real_external_round2.md  review_queue_policy.md  rulf_rustdpr_quant_advantage_protocol.md  rustdpr_assist_pipeline.md
reports/: cargo_fuzz_vs_rustdpr_delta.md  mb_panic_after_unsafe.md  mb_unwrap_shallow.md  smoke_micro.csv
scripts/: add_controlled_cases_phase1.py  annotation_agreement.py  baseline_classifiers.py  benchmark_inventory.py  cargo_fuzz_matrix.generated.yaml  cargo_fuzz_matrix.regression.compat.yaml  cargo_fuzz_matrix.regression.positive-smoke.yaml  cargo_fuzz_matrix.regression.smoke.yaml  cargo_fuzz_matrix.regression.yaml  check_expected.py  clean_artifacts.py  collect_cargo_fuzz_inputs.py  collect_cargo_fuzz_outputs.py  collect_coverage.py  collect_results.py  common.py  compare_pipelines.py  compute_metrics.py  discover_cargo_fuzz_cases.py  export_candidate_truth_template.py  find_mismatches.py  instrument_deps.py  make_cargo_fuzz_paper_table.py  make_tables.py  materialize_external_baselines.py  plot_results.py  rank_candidates.py  replay_external_input.py  replay_reproducer.py  run_ablation.py  run_all_micro.py  run_asan.py  run_baseline.py  (+21 more)
(+545 files in other folders)
