[workspace]
members = [
  "crates/rustdpr-core",
  "crates/rustdpr-cli",
  "crates/rustdpr-analyzer",
  "crates/rustdpr-trace",
  "crates/rustdpr-classifier",
  "crates/rustdpr-report",
  "crates/rustdpr-oracle",

  "benchmarks/micro/mb_unwrap_shallow",
  "benchmarks/micro/mb_panic_before_unsafe",
  "benchmarks/micro/mb_drop_then_panic",
  "benchmarks/micro/mb_panic_after_unsafe",
  "benchmarks/micro/mb_panic_inside_unsafe",
  "benchmarks/micro/mb_ffi_unwind_boundary",
  "benchmarks/micro/mb_harness_misuse_null",
  "benchmarks/micro/mb_maybeuninit_read",
  "benchmarks/micro/mb_raw_ptr_read_then_panic",
  "benchmarks/micro/mb_raw_ptr_write_then_panic",
  "benchmarks/micro/mb_slice_from_raw_parts",
  "benchmarks/micro/mb_unchecked_index",
  "benchmarks/micro/mb_set_len_then_panic",
  "benchmarks/micro/mb_assume_init_ub",
  "benchmarks/micro/mb_transmute_contract",

  "benchmarks/oracle/ob_double_free",
  "benchmarks/oracle/ob_heap_uaf",
  "benchmarks/oracle/ob_oob_raw",
  "benchmarks/oracle/ob_invalid_free",
  "benchmarks/oracle/ob_use_after_scope",

  "benchmarks/taxonomy/tb_panic_before_unsafe",
  "benchmarks/taxonomy/tb_adjacent_unsafe_no_hit",
  "benchmarks/taxonomy/tb_after_raw_pointer_write",
  "benchmarks/taxonomy/tb_before_dangerous_site_blocking",
  "benchmarks/taxonomy/tb_contract_panic_no_unsafe",
  "benchmarks/taxonomy/tb_harness_misuse_invalid_input",
  "benchmarks/taxonomy/tb_inside_unsafe_panic",
  "benchmarks/taxonomy/tb_panic_after_drop_invariant",
  "benchmarks/taxonomy/tb_before_dangerous_site_blocking",

]
exclude = [
  "benchmarks/micro/mb_panic_after_unsafe/fuzz",
  "benchmarks/micro/mb_drop_then_panic",
  "benchmarks/micro/mb_panic_before_unsafe/fuzz",
  "benchmarks/micro/mb_ffi_unwind_boundary/fuzz",
  "benchmarks/micro/mb_assume_init_ub/fuzz",
  "benchmarks/micro/mb_harness_misuse_null/fuzz",
  "benchmarks/micro/mb_maybeuninit_read/fuzz",
  "benchmarks/micro/mb_raw_ptr_read_then_panic/fuzz",
  "benchmarks/micro/mb_raw_ptr_write_then_panic/fuzz",
  "benchmarks/micro/mb_slice_from_raw_parts/fuzz",
  "benchmarks/micro/mb_unchecked_index/fuzz",
  "benchmarks/micro/mb_panic_inside_unsafe/fuzz",
  "benchmarks/micro/mb_set_len_then_panic/fuzz",
  "benchmarks/micro/mb_transmute_contract/fuzz",

  "benchmarks/oracle/ob_double_free/fuzz",
  "benchmarks/oracle/ob_heap_uaf/fuzz",
  "benchmarks/oracle/ob_oob_raw/fuzz",
  "benchmarks/oracle/ob_invalid_free/fuzz",
  "benchmarks/oracle/ob_use_after_scope/fuzz",

  "benchmarks/taxonomy/tb_adjacent_unsafe_no_hit/fuzz",
  "benchmarks/taxonomy/tb_after_raw_pointer_write/fuzz",
  "benchmarks/taxonomy/tb_before_dangerous_site_blocking/fuzz",
  "benchmarks/taxonomy/tb_contract_panic_no_unsafe/fuzz",
  "benchmarks/taxonomy/tb_inside_unsafe_panic/fuzz",
  "benchmarks/taxonomy/tb_panic_after_drop_invariant/fuzz",
  "benchmarks/taxonomy/tb_panic_before_unsafe/fuzz",
  "benchmarks/taxonomy/tb_harness_misuse_invalid_input/fuzz",

]
resolver = "2"

[workspace.dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
walkdir = "2"
syn = { version = "2", features = ["full", "visit"] }
quote = "1"
petgraph = "0.6"
once_cell = "1"
chrono = { version = "0.4", features = ["serde"] }

[profile.release]
debug = true
lto = "thin"
codegen-units = 1
