[workspace]
members = [
  "crates/rustdpr-core",
  "crates/rustdpr-cli",
  "crates/rustdpr-analyzer",
  "crates/rustdpr-trace",
  "crates/rustdpr-classifier",
  "crates/rustdpr-report",
  "crates/rustdpr-oracle",

  "benchmarks/micro/mb_unwrap_shallow",
  "benchmarks/micro/mb_panic_before_unsafe",
  "benchmarks/micro/mb_drop_then_panic",
  "benchmarks/micro/mb_panic_after_unsafe",
  "benchmarks/micro/mb_panic_inside_unsafe",
  "benchmarks/micro/mb_ffi_unwind_boundary",
  "benchmarks/micro/mb_harness_misuse_null",
  "benchmarks/micro/mb_maybeuninit_read",
  "benchmarks/micro/mb_raw_ptr_read_then_panic",
  "benchmarks/micro/mb_raw_ptr_write_then_panic",
  "benchmarks/micro/mb_slice_from_raw_parts",
  "benchmarks/micro/mb_unchecked_index",
  "benchmarks/micro/mb_set_len_then_panic",
  "benchmarks/micro/mb_assume_init_ub",
  "benchmarks/micro/mb_transmute_contract",

  "benchmarks/oracle/ob_double_free",
  "benchmarks/oracle/ob_heap_uaf",
  "benchmarks/oracle/ob_oob_raw",
  "benchmarks/oracle/ob_invalid_free",
  "benchmarks/oracle/ob_use_after_scope",

  "benchmarks/taxonomy/tb_panic_before_unsafe",
  "benchmarks/taxonomy/tb_adjacent_unsafe_no_hit",
  "benchmarks/taxonomy/tb_after_raw_pointer_write",
  "benchmarks/taxonomy/tb_before_dangerous_site_blocking",
  "benchmarks/taxonomy/tb_contract_panic_no_unsafe",
  "benchmarks/taxonomy/tb_harness_misuse_invalid_input",
  "benchmarks/taxonomy/tb_inside_unsafe_panic",
  "benchmarks/taxonomy/tb_panic_after_drop_invariant",

  "benchmarks/realworld/rw_smoke_raw_slice_view",

  "benchmarks/oracle/ob_stack_oob_read",
  "benchmarks/oracle/ob_global_oob_write",
  "benchmarks/oracle/ob_null_deref_miri",
  "benchmarks/oracle/ob_uninit_bool_miri",
  "benchmarks/oracle/ob_invalid_bool_miri",
  "benchmarks/oracle/ob_misaligned_read_miri",
  "benchmarks/regression/rsec_slice_deque_drain_filter_panic",
  "benchmarks/regression/rsec_toodee_draincol_copy_size",
  "benchmarks/regression/rsec_tracing_into_inner_forget",
  "benchmarks/regression/rsec_direct_ring_buffer_set_len",
  "benchmarks/regression/rsec_borrowck_any_as_u8_slice",
  "benchmarks/realworld/rw_bytes_frame_parser",
  "benchmarks/realworld/rw_ffi_cstr_boundary",
  "benchmarks/realworld/rw_image_stride_copy",
  "benchmarks/realworld/rw_arena_nonnull_handle",
  "benchmarks/realworld/rw_packet_set_len_decoder",
]
exclude = [
  "benchmarks/micro/mb_panic_after_unsafe/fuzz",
  "benchmarks/micro/mb_drop_then_panic/fuzz",
  "benchmarks/micro/mb_panic_before_unsafe/fuzz",
  "benchmarks/micro/mb_ffi_unwind_boundary/fuzz",
  "benchmarks/micro/mb_assume_init_ub/fuzz",
  "benchmarks/micro/mb_harness_misuse_null/fuzz",
  "benchmarks/micro/mb_maybeuninit_read/fuzz",
  "benchmarks/micro/mb_raw_ptr_read_then_panic/fuzz",
  "benchmarks/micro/mb_raw_ptr_write_then_panic/fuzz",
  "benchmarks/micro/mb_slice_from_raw_parts/fuzz",
  "benchmarks/micro/mb_unchecked_index/fuzz",
  "benchmarks/micro/mb_panic_inside_unsafe/fuzz",
  "benchmarks/micro/mb_set_len_then_panic/fuzz",
  "benchmarks/micro/mb_transmute_contract/fuzz",

  "benchmarks/oracle/ob_double_free/fuzz",
  "benchmarks/oracle/ob_heap_uaf/fuzz",
  "benchmarks/oracle/ob_oob_raw/fuzz",
  "benchmarks/oracle/ob_invalid_free/fuzz",
  "benchmarks/oracle/ob_use_after_scope/fuzz",

  "benchmarks/taxonomy/tb_adjacent_unsafe_no_hit/fuzz",
  "benchmarks/taxonomy/tb_after_raw_pointer_write/fuzz",
  "benchmarks/taxonomy/tb_before_dangerous_site_blocking/fuzz",
  "benchmarks/taxonomy/tb_contract_panic_no_unsafe/fuzz",
  "benchmarks/taxonomy/tb_inside_unsafe_panic/fuzz",
  "benchmarks/taxonomy/tb_panic_after_drop_invariant/fuzz",
  "benchmarks/taxonomy/tb_panic_before_unsafe/fuzz",
  "benchmarks/taxonomy/tb_harness_misuse_invalid_input/fuzz",

  "benchmarks/realworld/rw_smoke_raw_slice_view/fuzz",


  "benchmarks/oracle/ob_stack_oob_read/fuzz",
  "benchmarks/oracle/ob_global_oob_write/fuzz",
  "benchmarks/oracle/ob_null_deref_miri/fuzz",
  "benchmarks/oracle/ob_uninit_bool_miri/fuzz",
  "benchmarks/oracle/ob_invalid_bool_miri/fuzz",
  "benchmarks/oracle/ob_misaligned_read_miri/fuzz",

  "benchmarks/regression/rsec_slice_deque_drain_filter_panic/fuzz",
  "benchmarks/regression/rsec_toodee_draincol_copy_size/fuzz",
  "benchmarks/regression/rsec_tracing_into_inner_forget/fuzz",
  "benchmarks/regression/rsec_direct_ring_buffer_set_len/fuzz",
  "benchmarks/regression/rsec_borrowck_any_as_u8_slice/fuzz",

  "benchmarks/realworld/rw_bytes_frame_parser/fuzz",
  "benchmarks/realworld/rw_ffi_cstr_boundary/fuzz",
  "benchmarks/realworld/rw_image_stride_copy/fuzz",
  "benchmarks/realworld/rw_arena_nonnull_handle/fuzz",
  "benchmarks/realworld/rw_packet_set_len_decoder/fuzz",
]
resolver = "2"

[workspace.dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
walkdir = "2"
syn = { version = "2", features = ["full", "visit"] }
quote = "1"
petgraph = "0.6"
once_cell = "1"
chrono = { version = "0.4", features = ["serde"] }

[profile.release]
debug = true
lto = "thin"
codegen-units = 1
