[workspace]
members = [
  "crates/rustdpr-core",
  "crates/rustdpr-cli",
  "crates/rustdpr-analyzer",
  "crates/rustdpr-trace",
  "crates/rustdpr-classifier",
  "crates/rustdpr-report",
  "crates/rustdpr-oracle",

  "benchmarks/micro/mb_unwrap_shallow",
  "benchmarks/micro/mb_panic_before_unsafe",
  "benchmarks/micro/mb_drop_then_panic",
  "benchmarks/micro/mb_panic_after_unsafe",
  "benchmarks/micro/mb_panic_inside_unsafe",
  "benchmarks/micro/mb_ffi_unwind_boundary",
  "benchmarks/micro/mb_harness_misuse_null",
  "benchmarks/micro/mb_maybeuninit_read",
  "benchmarks/micro/mb_raw_ptr_read_then_panic",
  "benchmarks/micro/mb_raw_ptr_write_then_panic",
  "benchmarks/micro/mb_slice_from_raw_parts",
  "benchmarks/micro/mb_unchecked_index",
  "benchmarks/micro/mb_set_len_then_panic",
  "benchmarks/micro/mb_assume_init_ub",
  "benchmarks/micro/mb_transmute_contract",

  "benchmarks/oracle/ob_double_free",
  "benchmarks/oracle/ob_heap_uaf",
  "benchmarks/oracle/ob_oob_raw",
  "benchmarks/oracle/ob_invalid_free",
  "benchmarks/oracle/ob_use_after_scope",

  "benchmarks/taxonomy/tb_panic_before_unsafe",
  "benchmarks/taxonomy/tb_adjacent_unsafe_no_hit",
  "benchmarks/taxonomy/tb_after_raw_pointer_write",
  "benchmarks/taxonomy/tb_before_dangerous_site_blocking",
  "benchmarks/taxonomy/tb_contract_panic_no_unsafe",
  "benchmarks/taxonomy/tb_harness_misuse_invalid_input",
  "benchmarks/taxonomy/tb_inside_unsafe_panic",
  "benchmarks/taxonomy/tb_panic_after_drop_invariant",

  "benchmarks/realworld/rw_smoke_raw_slice_view",

  "benchmarks/oracle/ob_stack_oob_read",
  "benchmarks/oracle/ob_global_oob_write",
  "benchmarks/oracle/ob_null_deref_miri",
  "benchmarks/oracle/ob_uninit_bool_miri",
  "benchmarks/oracle/ob_invalid_bool_miri",
  "benchmarks/oracle/ob_misaligned_read_miri",
  "benchmarks/realworld/rw_bytes_frame_parser",
  "benchmarks/realworld/rw_ffi_cstr_boundary",
  "benchmarks/realworld/rw_image_stride_copy",
  "benchmarks/realworld/rw_arena_nonnull_handle",
  "benchmarks/realworld/rw_packet_set_len_decoder",
  "benchmarks/micro/mb_before_unsafe_nested_call",
  "benchmarks/micro/mb_inside_unsafe_assert",
  "benchmarks/micro/mb_none_static_unsafe_unreached",
  "benchmarks/micro/mb_harness_invalid_len_capacity",
  "benchmarks/micro/mb_ffi_callback_panics",
  "benchmarks/taxonomy/tb_before_same_function_later_block",
  "benchmarks/taxonomy/tb_static_unsafe_unreached",
  "benchmarks/taxonomy/tb_harness_bad_from_raw_parts",
  "benchmarks/oracle/ob_asan_no_finding_control",
  "benchmarks/oracle/ob_miri_unsupported_ffi",
  "benchmarks/micro/mb_before_unsafe_same_fn_branch",
  "benchmarks/micro/mb_inside_unsafe_unwrap",
  "benchmarks/micro/mb_ffi_extern_c_unwind_boundary",
  "benchmarks/micro/mb_harness_null_ptr_direct",
  "benchmarks/micro/mb_drop_invariant_after_panic",
  "benchmarks/taxonomy/tb_before_nested_callee",
  "benchmarks/taxonomy/tb_inside_unsafe_unwrap",
  "benchmarks/taxonomy/tb_ffi_extern_c_unwind",
  "benchmarks/taxonomy/tb_harness_direct_unsafe_precondition",
  "benchmarks/taxonomy/tb_none_high_coverage_no_danger",
  "benchmarks/taxonomy/tb_after_set_len_then_panic",
  "benchmarks/oracle/ob_miri_no_finding_control",
  "benchmarks/oracle/ob_asan_oob_write_control",
  "benchmarks/micro/mb_before_unsafe_guarded_by_length",
  "benchmarks/micro/mb_inside_unsafe_index",
  "benchmarks/micro/mb_ffi_c_unwind_callback_panic",
  "benchmarks/micro/mb_harness_aliasing_raw_mut",
  "benchmarks/micro/mb_maybeuninit_assume_init_after_panic",
  "benchmarks/taxonomy/tb_ffi_callback_panics",
  "benchmarks/taxonomy/tb_inside_unsafe_assert_macro",
  "benchmarks/taxonomy/tb_harness_aliasing_raw_mut",
  "benchmarks/regression/rsec_slice_deque_2021_0047_vuln",
  "benchmarks/regression/rsec_toodee_2021_0028_vuln",
  "benchmarks/regression/rsec_toodee_2021_0028_fixed",
  "benchmarks/regression/rsec_direct_ring_buffer_2025_0105_vuln",
  "benchmarks/regression/rsec_insert_many_2021_0042_vuln",
  "benchmarks/regression/rsec_through_2021_0049_vuln",
  "benchmarks/regression/rsec_scratchpad_2021_0030_vuln",
#  "benchmarks/regression/rsec_scratchpad_2021_0030_fixed",
  "benchmarks/regression/rsec_stack_dst_2021_0033_vuln",
#  "benchmarks/regression/rsec_stack_dst_2021_0033_fixed",
  "benchmarks/regression/rsec_qwutils_2021_0018_vuln",
#  "benchmarks/regression/rsec_qwutils_2021_0018_fixed",
#  "benchmarks/regression/rsec_direct_ring_buffer_2025_0105_fixed",
    "benchmarks/regression/rsec_ms3d_2021_0016_vuln",
#    "benchmarks/regression/rsec_ms3d_2021_0016_fixed",
    "benchmarks/regression/rsec_endian_trait_2021_0039_vuln",
    "benchmarks/regression/rsec_marc_2021_0014_vuln",
    "benchmarks/regression/rsec_marc_2021_0014_fixed",
    "benchmarks/regression/rsec_cdr_2021_0012_vuln",
#    "benchmarks/regression/rsec_cdr_2021_0012_fixed",
    "benchmarks/regression/rsec_bra_2021_0008_vuln",
#    "benchmarks/regression/rsec_bra_2021_0008_fixed",
]
exclude = [
  "benchmarks/micro/mb_panic_after_unsafe/fuzz",
  "benchmarks/micro/mb_drop_then_panic/fuzz",
  "benchmarks/micro/mb_panic_before_unsafe/fuzz",
  "benchmarks/micro/mb_ffi_unwind_boundary/fuzz",
  "benchmarks/micro/mb_assume_init_ub/fuzz",
  "benchmarks/micro/mb_harness_misuse_null/fuzz",
  "benchmarks/micro/mb_maybeuninit_read/fuzz",
  "benchmarks/micro/mb_raw_ptr_read_then_panic/fuzz",
  "benchmarks/micro/mb_raw_ptr_write_then_panic/fuzz",
  "benchmarks/micro/mb_slice_from_raw_parts/fuzz",
  "benchmarks/micro/mb_unchecked_index/fuzz",
  "benchmarks/micro/mb_panic_inside_unsafe/fuzz",
  "benchmarks/micro/mb_set_len_then_panic/fuzz",
  "benchmarks/micro/mb_transmute_contract/fuzz",

  "benchmarks/oracle/ob_double_free/fuzz",
  "benchmarks/oracle/ob_heap_uaf/fuzz",
  "benchmarks/oracle/ob_oob_raw/fuzz",
  "benchmarks/oracle/ob_invalid_free/fuzz",
  "benchmarks/oracle/ob_use_after_scope/fuzz",

  "benchmarks/taxonomy/tb_adjacent_unsafe_no_hit/fuzz",
  "benchmarks/taxonomy/tb_after_raw_pointer_write/fuzz",
  "benchmarks/taxonomy/tb_before_dangerous_site_blocking/fuzz",
  "benchmarks/taxonomy/tb_contract_panic_no_unsafe/fuzz",
  "benchmarks/taxonomy/tb_inside_unsafe_panic/fuzz",
  "benchmarks/taxonomy/tb_panic_after_drop_invariant/fuzz",
  "benchmarks/taxonomy/tb_panic_before_unsafe/fuzz",
  "benchmarks/taxonomy/tb_harness_misuse_invalid_input/fuzz",

  "benchmarks/realworld/rw_smoke_raw_slice_view/fuzz",


  "benchmarks/oracle/ob_stack_oob_read/fuzz",
  "benchmarks/oracle/ob_global_oob_write/fuzz",
  "benchmarks/oracle/ob_null_deref_miri/fuzz",
  "benchmarks/oracle/ob_uninit_bool_miri/fuzz",
  "benchmarks/oracle/ob_invalid_bool_miri/fuzz",
  "benchmarks/oracle/ob_misaligned_read_miri/fuzz",


  "benchmarks/realworld/rw_bytes_frame_parser/fuzz",
  "benchmarks/realworld/rw_ffi_cstr_boundary/fuzz",
  "benchmarks/realworld/rw_image_stride_copy/fuzz",
  "benchmarks/realworld/rw_arena_nonnull_handle/fuzz",
  "benchmarks/realworld/rw_packet_set_len_decoder/fuzz",
  "benchmarks/micro/mb_before_unsafe_nested_call/fuzz",
  "benchmarks/micro/mb_inside_unsafe_assert/fuzz",
  "benchmarks/micro/mb_none_static_unsafe_unreached/fuzz",
  "benchmarks/micro/mb_harness_invalid_len_capacity/fuzz",
  "benchmarks/micro/mb_ffi_callback_panics/fuzz",
  "benchmarks/taxonomy/tb_before_same_function_later_block/fuzz",
  "benchmarks/taxonomy/tb_static_unsafe_unreached/fuzz",
  "benchmarks/taxonomy/tb_harness_bad_from_raw_parts/fuzz",
  "benchmarks/oracle/ob_asan_no_finding_control/fuzz",
  "benchmarks/oracle/ob_miri_unsupported_ffi/fuzz",
  "benchmarks/micro/mb_before_unsafe_same_fn_branch/fuzz",
  "benchmarks/micro/mb_inside_unsafe_unwrap/fuzz",
  "benchmarks/micro/mb_ffi_extern_c_unwind_boundary/fuzz",
  "benchmarks/micro/mb_harness_null_ptr_direct/fuzz",
  "benchmarks/micro/mb_drop_invariant_after_panic/fuzz",
  "benchmarks/taxonomy/tb_before_nested_callee/fuzz",
  "benchmarks/taxonomy/tb_inside_unsafe_unwrap/fuzz",
  "benchmarks/taxonomy/tb_ffi_extern_c_unwind/fuzz",
  "benchmarks/taxonomy/tb_harness_direct_unsafe_precondition/fuzz",
  "benchmarks/taxonomy/tb_none_high_coverage_no_danger/fuzz",
  "benchmarks/taxonomy/tb_after_set_len_then_panic/fuzz",
  "benchmarks/oracle/ob_miri_no_finding_control/fuzz",
  "benchmarks/oracle/ob_asan_oob_write_control/fuzz",
  "benchmarks/micro/mb_before_unsafe_guarded_by_length/fuzz",
  "benchmarks/micro/mb_inside_unsafe_index/fuzz",
  "benchmarks/micro/mb_ffi_c_unwind_callback_panic/fuzz",
  "benchmarks/micro/mb_harness_aliasing_raw_mut/fuzz",
  "benchmarks/micro/mb_maybeuninit_assume_init_after_panic/fuzz",
  "benchmarks/taxonomy/tb_ffi_callback_panics/fuzz",
  "benchmarks/taxonomy/tb_inside_unsafe_assert_macro/fuzz",
  "benchmarks/taxonomy/tb_harness_aliasing_raw_mut/fuzz",
  "benchmarks/regression/rsec_slice_deque_2021_0047_vuln/fuzz",
  "benchmarks/regression/rsec_toodee_2021_0028_vuln/fuzz",
  "benchmarks/regression/rsec_toodee_2021_0028_fixed/fuzz",
  "benchmarks/regression/rsec_direct_ring_buffer_2025_0105_vuln/fuzz",
#  "benchmarks/regression/rsec_direct_ring_buffer_2025_0105_fixed/fuzz",

  "benchmarks/regression/rsec_scratchpad_2021_0030_vuln/fuzz",
  "benchmarks/regression/rsec_scratchpad_2021_0030_fixed/fuzz",
  "benchmarks/regression/rsec_stack_dst_2021_0033_vuln/fuzz",
  "benchmarks/regression/rsec_stack_dst_2021_0033_fixed/fuzz",
  "benchmarks/regression/rsec_qwutils_2021_0018_vuln/fuzz",
  "benchmarks/regression/rsec_qwutils_2021_0018_fixed/fuzz",
  "benchmarks/regression/rsec_ms3d_2021_0016_vuln/fuzz",
  "benchmarks/regression/rsec_ms3d_2021_0016_fixed/fuzz",
  "benchmarks/regression/rsec_endian_trait_2021_0039_vuln/fuzz",
  "benchmarks/regression/rsec_marc_2021_0014_vuln/fuzz",
  "benchmarks/regression/rsec_marc_2021_0014_fixed/fuzz",
  "benchmarks/regression/rsec_cdr_2021_0012_vuln/fuzz",
  "benchmarks/regression/rsec_cdr_2021_0012_fixed/fuzz",
  "benchmarks/regression/rsec_bra_2021_0008_vuln/fuzz",
  "benchmarks/regression/rsec_bra_2021_0008_fixed/fuzz",
  "benchmarks/regression/rsec_insert_many_2021_0042_vuln/fuzz",
  "benchmarks/regression/rsec_through_2021_0049_vuln/fuzz"
]
resolver = "2"

[workspace.dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
walkdir = "2"
syn = { version = "2", features = ["full", "visit"] }
quote = "1"
petgraph = "0.6"
once_cell = "1"
chrono = { version = "0.4", features = ["serde"] }

[patch.crates-io]
direct_ring_buffer = { path = "vendor/direct_ring_buffer-0.2.1" }
through = { path = "vendor/through-0.1.0" }
scratchpad = { path = "vendor/scratchpad-1.3.0" }
bra = { path = "vendor/bra-0.1.0" }

[profile.release]
debug = true
lto = "thin"
codegen-units = 1
