[package]
name = "rustdpr-analyzer"
version = "0.1.0"
edition = "2024"

[dependencies]
rustdpr-core = { path = "../rustdpr-core" }
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
syn = { version = "2", features = ["full", "visit"] }
quote = "1"
walkdir = "2"
cargo_metadata = "0.18"
proc-macro2 = { version = "1", features = ["span-locations"] }