[package]
name = "mb_ffi_c_unwind_callback_panic-fuzz"
version = "0.0.0"
publish = false
edition = "2024"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"
mb_ffi_c_unwind_callback_panic = { path = "..", package = "mb_ffi_c_unwind_callback_panic" }
rustdpr-trace = { path = "../../../../crates/rustdpr-trace" }
rustdpr-core = { path = "../../../../crates/rustdpr-core" }

[[bin]]
name = "fuzz_target_1"
path = "fuzz_targets/fuzz_target_1.rs"
test = false
doc = false
bench = false

[workspace]
