[package]
name = "rustdpr-core-fuzz"
version = "0.0.0"
publish = false
edition = "2024"

[package.metadata]
cargo-fuzz = true


[dependencies]
libfuzzer-sys = "0.4"
mb_panic_after_unsafe = { path = ".." }
rustdpr-trace = { path = "../../../../crates/rustdpr-trace" }
rustdpr-core = { path = "../../../../crates/rustdpr-core" }

[[bin]]
name = "fuzz_target_1"
path = "fuzz_targets/fuzz_target_1.rs"
test = false
doc = false
bench = false

[workspace]
