[package]
name = "ob_uninit_bool_miri-fuzz"
version = "0.0.0"
publish = false
edition = "2021"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"
ob_uninit_bool_miri = { path = ".." }
rustdpr-trace = { path = "../../../../crates/rustdpr-trace" }

[[bin]]
name = "fuzz_target_1"
path = "fuzz_targets/fuzz_target_1.rs"
test = false
doc = false
bench = false

[workspace]
