[package]
name = "rsec_direct_ring_buffer_2025_0105_fixed-fuzz"
version = "0.0.0"
publish = false
edition = "2021"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"
rsec_direct_ring_buffer_2025_0105_fixed = { path = "..", package = "rsec_direct_ring_buffer_2025_0105_fixed" }
rustdpr-trace = { path = "../../../../crates/rustdpr-trace" }

[[bin]]
name = "fuzz_target_1"
path = "fuzz_targets/fuzz_target_1.rs"
test = false
doc = false
bench = false

[workspace]
