[package]
name = "rsec_direct_ring_buffer_2025_0105_vuln-fuzz"
version = "0.0.0"
publish = false
edition = "2021"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"
rsec_direct_ring_buffer_2025_0105_vuln = { path = "..", package = "rsec_direct_ring_buffer_2025_0105_vuln" }
rustdpr-trace = { path = "../../../../crates/rustdpr-trace" }

[[bin]]
name = "fuzz_target_1"
path = "fuzz_targets/fuzz_target_1.rs"
test = false
doc = false
bench = false

[workspace]
resolver = "2"

[patch.crates-io]
direct_ring_buffer = { path = "../../../../vendor/direct_ring_buffer-0.2.1" }
