[package]
name = "rsec_slice_deque_2021_0047_fixed_control-fuzz"
version = "0.0.0"
publish = false
edition = "2021"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"
rsec_slice_deque_2021_0047_fixed_control = { path = "..", package = "rsec_slice_deque_2021_0047_fixed_control" }
rustdpr-trace = { path = "../../../../crates/rustdpr-trace" }
rustdpr-core = { path = "../../../../crates/rustdpr-core" }

[[bin]]
name = "fuzz_target_1"
path = "fuzz_targets/fuzz_target_1.rs"
test = false
doc = false
bench = false

[workspace]
