[package]
name = "rsec_slice_deque_2021_0047_vuln-fuzz"
version = "0.0.0"
edition = "2021"
publish = false

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"
rsec_slice_deque_2021_0047_vuln = { path = ".." }

[[bin]]
name = "fuzz_target_1"
path = "fuzz_targets/fuzz_target_1.rs"
test = false
doc = false

[workspace]
resolver = "2"
